<resources>
    <string name="app_name" translatable="false">Volleyball Scorer</string>
    <string name="start_score" translatable="false">0</string>
    <string name="reset">Reset</string>
    <string name="switchh">Switch</string>
    <string name="settings">Settings</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="counting_header">Counting</string>
    <string name="confirms_header">Confirms</string>

    <!-- Counting Preferences -->
    <string name="score_limit_title">Score Limit</string>
    <string name="set_limit_title">Set Limit</string>
    <string name="auto_set_add_title">Add sets automatically</string>
    <string name="auto_set_add_summary">"Add a set when the team reaches the scoring limit and leads by two points"</string>

    <!-- Confirms Preferences -->
    <string name="manual_add_set_confirm_title">Confirm to add manual set</string>
    <string name="reset_confirm_title">Confirm before reset</string>
</resources>