<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/counting_header">

        <ListPreference
            app:key="score_limit"
            app:title="@string/score_limit_title"
            app:entries="@array/score_limit_entries"
            app:entryValues="@array/score_limit_values"
            app:defaultValue="twenty_five"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:key="set_limit"
            app:title="@string/set_limit_title"
            app:entries="@array/set_limit_entries"
            app:entryValues="@array/set_limit_values"
            app:defaultValue="five"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            app:key="auto_set_add"
            app:title="@string/auto_set_add_title"
            app:defaultValue="true"
            app:summary="@string/auto_set_add_summary"/>

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/confirms_header">

        <SwitchPreferenceCompat
            app:key="manual_add_set_confirm"
            app:title="@string/manual_add_set_confirm_title" />

        <SwitchPreferenceCompat
            app:key="reset_confirm"
            app:title="@string/reset_confirm_title"
            />

    </PreferenceCategory>

</PreferenceScreen>