<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/team1Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/bebasneue_regular"
        android:gravity="center"
        android:onClick="sumPoint"
        android:text="@string/start_score"
        android:textColor="@color/team1"
        android:textSize="300sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/team1Set"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml,DuplicateSpeakableTextCheck,VisualLintBounds" />

    <TextView
        android:id="@+id/team2Set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/bebasneue_regular"
        android:onClick="sumPoint"
        android:text="@string/start_score"
        android:textColor="@color/team2"
        android:textSize="150sp"
        app:layout_constraintStart_toEndOf="@+id/buttonContainer"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/team1Set"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:fontFamily="@font/bebasneue_regular"
        android:onClick="sumPoint"
        android:text="@string/start_score"
        android:textColor="@color/team1"
        android:textSize="150sp"
        app:layout_constraintEnd_toStartOf="@+id/buttonContainer"
        app:layout_constraintTop_toTopOf="parent"
        android:focusable="true"
        tools:ignore="UsingOnClickInXml" />

    <TextView
        android:id="@+id/team2Score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:fontFamily="@font/bebasneue_regular"
        android:gravity="center"
        android:onClick="sumPoint"
        android:text="@string/start_score"
        android:textColor="@color/team2"
        android:textSize="300sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/team2Set"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UsingOnClickInXml,VisualLintBounds" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <LinearLayout
        android:id="@+id/buttonContainer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="122dp"
        android:layout_marginEnd="123dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/team2Score"
        app:layout_constraintStart_toEndOf="@+id/team1Score"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageButton
            android:id="@+id/resetButton"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/reset"
            android:minWidth="0dp"
            android:onClick="resetPoints"
            android:src="@drawable/restart"
            tools:ignore="UsingOnClickInXml" />

        <ImageButton
            android:id="@+id/switchButton"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:contentDescription="@string/switchh"
            android:minWidth="0dp"
            android:onClick="switchPoints"
            android:src="@drawable/swap"
            tools:ignore="UsingOnClickInXml" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
